Consolidate uses of javac's parser in google-java-format
PiperOrigin-RevId: 843691248